# http

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  Doxyfile  LICENSE  README.md  TODOs.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cmake/: FetchBoost.cmake
core/: Cargo.toml
core/src/: http.rs  request.rs
docs/: cmake-modules.md  mainpage.md
include/http/: http.h
src/http/cli/: main.cc
src/http/core/: http.cc  http.h  request.cc  request.h  response.cc  response.h  socket.cc  socket.h  status_code.cc  status_code.h  tcp.cc  tcp.h
tests/: CMakeLists.txt  http_request_unittest.cc  socket_unittest.cc  tcp_socket_unittest.cc  tcpsocket_unittest.cc
utils/: generate-doxygen-docs.sh
